[gd_scene load_steps=5 format=3 uid="uid://phabmi8bu1w2"]

[ext_resource type="PackedScene" uid="uid://bsu2j4d4eo3l8" path="res://Damage/Hitbox.tscn" id="1_vqw25"]
[ext_resource type="Script" path="res://Damage/Projectile.gd" id="2_3fwa0"]
[ext_resource type="Texture2D" uid="uid://b8lvvprvqcbhb" path="res://Player Stuff/Animation/Anim.png" id="2_4ybqw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rls8w"]
radius = 56.0357

[node name="Projectile" groups=["Projectile"] instance=ExtResource("1_vqw25")]
modulate = Color(1, 1, 1, 1)
scale = Vector2(0.5, 0.5)
collision_layer = 8
collision_mask = 3
script = ExtResource("2_3fwa0")
Speed = 1000

[node name="Sprite2D" type="Sprite2D" parent="." index="0"]
texture = ExtResource("2_4ybqw")

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource("CircleShape2D_rls8w")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." index="2"]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
